        service_members service defines a method 'direct_user_lookup' that
        returns True, the user lookup UI in the access tab is changed to
        an add user to clipboard UI. This allows the adding of new
        users to a clipboard directly.

    Bugs Fixed:

      
      - fixed 101240: SilvaExternalSource cannot be disabled.

    Ported from 2.0 branch

      - fixed wuw140: Incorrect caching of images.

      - fixed 150809: sidebar cache not invalidated when folder
        removed

      - Adding Groups, Virtual Groups and IPGroups was broken.

      - creationdate is once again set on versioned content.

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.

      - Removed extra <br/> tag when viewing codesources in kupu.

      - fix for bug 109008: wrong tooltip when hovering over version
        status link

      - importing a zexp file with the Silva root in there was
        failing, because a Zope 3 event got fired that tried to re-add
        'collection' to 'service_metadata' while this is already
        there. Added a check to SilvaMetadata (1.0.1) that fixes this.

      - fix for bug: 101651: default settings for columns / rows on
        table creation in kupu

      - widget-based and xslt renderers render underlines in the same
        way with <span class="underline">

      - fixed 101494: Empty "source" elements break the XSLT renderer

      - fixed 101396: paragraphs in lists, tables rendered differently
        in widgets vs xslt renderers
